<resources>
    <string name="app_name">FridgeIt</string>
    <string name="title_activity_login">Sign in</string>
    <string name="widget_title">Items</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not registered? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Passwsord</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="add_item_txt">Add Item</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="hint_product_name">Product Name</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_expiry_date">Expiry Date</string>
    <string name="hint_price">Price</string>
    <string name="btn_scan_barcode">Scan Barcode</string>

    <string name="cnt_product">Name of the product</string>
    <string name="cnt_quantity">Quantity of the product</string>
    <string name="cnt_date">Expiry date of the product</string>
    <string name="cnt_price">Price of the product</string>
    <string name="cnt_bcd">Scan barcode</string>
    <string name="cnt_add">Add Item</string>

    <string name="tst_enter_pwd">Enter password!</string>
    <string name="tst_email_id">Enter email address!</string>
    <string name="tst_pwd_shrt">Password too short, enter minimum 6 characters!</string>

    <string name="auth_failed_tst">Authentication failed.</string>
    <string name="rst_id">Enter your registered email id</string>
    <string name="rst_inst">We have sent you instructions to reset your password!</string>
    <string name="rst_failed">Failed to send reset email!</string>

    <string name="txt_permission">Please grant permissions.</string>
    <string name="KEY_LIST">list</string>
    <string name="ada_expiring">Expiring in&#160;</string>
    <string name="ada_date">&#160;days</string>
    <string name="ada_quantity">Quantity:&#160;</string>
    <string name="ada_price">Price:&#160;</string>
    <string name="KEY_MODEL">model</string>
    <string name="itm_exists">Item already exists</string>
    <string name="err_bcd">Barcode Detector not functional, please wait for sometime</string>
    <string name="err_nobcd">No barcode detected</string>
    <string name="dialog_msg">Hold on!</string>
    <string name="main_loading">Loading..</string>
    <string name="main_getdata">Getting Data</string>
    <string name="main_removeitm">Remove Item?</string>
    <string name="main_undo">Undo</string>
    <string name="info_exit">Please click BACK again to exit</string>
    <string name="sign_up">Sign Up</string>

</resources>
