<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.EditViewActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/flt_add2"
        android:layout_width="63dp"
        android:layout_height="59dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_check_black_24dp" />

    <EditText
        android:id="@+id/ed_namedit"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/cnt_product"
        android:ems="10"
        android:hint="@string/hint_product_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_quantityedit"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/cnt_quantity"
        android:ems="10"
        android:hint="@string/hint_quantity"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/ed_namedit"
        app:layout_constraintStart_toStartOf="@+id/ed_namedit"
        app:layout_constraintTop_toBottomOf="@+id/ed_namedit" />

    <EditText
        android:id="@+id/ed_dateedit"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/cnt_date"
        android:ems="10"
        android:hint="@string/hint_expiry_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/ed_quantityedit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_quantityedit"
        app:layout_constraintTop_toBottomOf="@+id/ed_quantityedit" />

    <EditText
        android:id="@+id/ed_pricedit"
        android:layout_width="353dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/cnt_price"
        android:ems="10"
        android:hint="@string/hint_price"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/ed_dateedit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_dateedit"
        app:layout_constraintTop_toBottomOf="@+id/ed_dateedit" />

</android.support.constraint.ConstraintLayout>