<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddItemActivity">

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_product_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_quantity"
        android:layout_width="354dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_quantity"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/ed_name"
        app:layout_constraintStart_toStartOf="@+id/ed_name"
        app:layout_constraintTop_toBottomOf="@+id/ed_name" />

    <EditText
        android:id="@+id/ed_date"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_expiry_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/ed_quantity"
        app:layout_constraintStart_toStartOf="@+id/ed_quantity"
        app:layout_constraintTop_toBottomOf="@+id/ed_quantity" />

    <EditText
        android:id="@+id/ed_price"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_price"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/ed_date"
        app:layout_constraintStart_toStartOf="@+id/ed_date"
        app:layout_constraintTop_toBottomOf="@+id/ed_date" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/flt_add"
        android:layout_width="63dp"
        android:layout_height="59dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_check_black_24dp"
        android:focusable="true" />

    <Button
        android:id="@+id/btn_bcd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="132dp"
        android:text="@string/btn_scan_barcode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_price"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>