<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:src="@color/colorAccent"
            android:visibility="gone" />

        <LinearLayout
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="1dp">

            <TextView
                android:id="@+id/inv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="212dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/inv_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/cnt_quantity"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/inv_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/cnt_price"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/inv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/cnt_date"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>